# webapp-photo-luminescence

./: .dockerignore  .gitignore  .pre-commit-config.yaml  DEVELOPMENT.md  Dockerfile  README.md  pyproject.toml
.devcontainer/: devcontainer.json  requirements.txt
.github/: dependabot.yml
.github/workflows/: build-and-push.yml  docker-build-and-push.yml  docker-build.yml  test.yml
src/dawa_trpl/: __init__.py  __main__.py  config.py  data_system.py  powerpoint.py  typing.py
src/dawa_trpl/components/tabs/: common.py
src/dawa_trpl/components/tabs/h_figure_tab/: __init__.py  process.py
src/dawa_trpl/components/tabs/streak_image_tab/: __init__.py  process.py
src/dawa_trpl/components/tabs/v_figure_tab/: __init__.py  process.py
src/dawa_trpl/components/upload_bar/: __init__.py
src/webapp_photo_luminescence/: __init__.py  __main__.py  _doctest_dummy.py  config.py  data_system.py  powerpoint.py
src/webapp_photo_luminescence/components/tabs/: __init__.py  common.py
src/webapp_photo_luminescence/components/tabs/h_figure_tab/: __init__.py
src/webapp_photo_luminescence/components/tabs/streak_image_tab/: __init__.py  process.py
src/webapp_photo_luminescence/components/tabs/v_figure_tab/: __init__.py
src/webapp_photo_luminescence/components/upload_bar/: __init__.py
tests/: __init__.py
tests/end2end/: __init__.py
tests/integration/: __init__.py
tests/testdata/img/: testcase0.img  testcase1.img  testcase2.img  testcase3.img
tests/unit/: conftest.py  test_components_tabs_h_figure_tab.py  test_components_tabs_h_figure_tab_process.py  test_components_tabs_streak_image_tab.py  test_components_tabs_streak_image_tab_process.py  test_components_tabs_v_figure_tab.py  test_components_tabs_v_figure_tab_process.py  test_components_upload_bar.py  test_data_system.py  test_powerpoint.py
