[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "dawa-trpl"
description = "A web application for TRPL measurement"
readme = "README.md"
requires-python = "~=3.10"
license = "MIT"
authors = [
  { name = "Shuhei Nitta", email = "huisintheta@gmail.com" }
]
# keywords = []
# classifiers = []
dependencies = [
  "dash~=2.14.1",
  "dash-bootstrap-components~=1.5.0",
  "tlab-analysis @ git+https://github.com/wasedatakeuchilab/tlab-analysis@v0.4.0",
  "tlab-pptx @ git+https://github.com/wasedatakeuchilab/tlab-pptx@v0.1.4",
  "asgiref~=3.7.2",
]
dynamic = ["version"]

[project.urls]
Documentation = "https://github.com/wasedatakeuchilab/dawa-trpl"
Homepage = "https://github.com/wasedatakeuchilab/dawa-trpl"

[project.optional-dependencies]
test = [
  "pytest==7.4.3",
  "pytest-cov==4.1.0",
  "pytest-describe==2.1.0",
  "pytest-mock==3.12.0",
]
mypy = [
  "mypy==1.8.0",
  "pandas-stubs==2.1.1.230928",
]
jupyter = [
  "ipywidgets==8.1.1",
  "jupyterlab==4.0.9",
]
uvicorn = [
  "uvicorn==0.25.0",
]

[tool.hatch.version]
path = "src/dawa_trpl/__init__.py"

[tool.hatch.envs.default]
features = ["test", "mypy", "jupyter", "uvicorn"]

[tool.hatch.envs.default.scripts]
test = "pytest --cov-report=term-missing:skip-covered src tests {args}"
# test-doc = "pytest --doctest-modules src"
check-type = "mypy src tests {args}"
serve = "uvicorn dawa_trpl:server --reload --reload-dir=src {args}"

[tool.hatch.envs.doc]
dependencies = []

[tool.hatch.envs.doc.scripts]

[tool.hatch.metadata]
allow-direct-references = true

[tool.mypy]
strict = true
sqlite_cache = true
disallow_untyped_decorators = false

[[tool.mypy.overrides]]
module = [
  "dash.*",
  "dash_bootstrap_components.*",
  "plotly.*",
  "scipy.*",
]
ignore_missing_imports = true

[tool.isort]
profile = "black"

[tool.pytest.ini_options]
addopts = "--cov=dawa_trpl"

[tool.coverage.run]
omit = ["*/__main__.py"]
