[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "dawa-trpl"
description = "A web application for TRPL measurement"
readme = "README.md"
requires-python = "~=3.10"
license = "MIT"
authors = [
  { name = "Shuhei Nitta", email = "huisintheta@gmail.com" }
]
# keywords = []
# classifiers = []
dependencies = [
  "dash~=2.16.1",
  "dash-bootstrap-components~=1.5.0",
  "tlab-analysis @ git+https://github.com/wasedatakeuchilab/tlab-analysis@v0.5.1",
  "tlab-pptx @ git+https://github.com/wasedatakeuchilab/tlab-pptx@v0.1.5",
  "asgiref~=3.7.2",
]
dynamic = ["version"]

[project.urls]
Documentation = "https://github.com/wasedatakeuchilab/dawa-trpl"
Homepage = "https://github.com/wasedatakeuchilab/dawa-trpl"
Repository = "https://github.com/wasedatakeuchilab/dawa-trpl"

[project.optional-dependencies]
test = [
  "mypy==1.8.0",
  "pytest==7.4.4",
  "pytest-cov==4.1.0",
  "pytest-describe==2.2.0",
  "pytest-mock==3.12.0",
]
jupyter = [
  "ipywidgets==8.1.2",
  "jupyterlab==4.0.10",
]
uvicorn = [
  "uvicorn==0.28.0",
]

[tool.hatch.version]
path = "src/dawa_trpl/__init__.py"

[tool.hatch.envs.default]
features = ["test", "jupyter", "uvicorn"]

[tool.hatch.envs.default.scripts]
test = "pytest --cov-report=term-missing:skip-covered src tests {args}"
# test-doc = "pytest --doctest-modules src"
check-type = "mypy src tests {args}"
serve = "uvicorn dawa_trpl:server --reload --reload-dir=src {args}"

[tool.hatch.envs.doc]
dependencies = []

[tool.hatch.envs.doc.scripts]

[tool.hatch.metadata]
allow-direct-references = true

[tool.mypy]
strict = true
sqlite_cache = true
disallow_untyped_decorators = false

[[tool.mypy.overrides]]
module = [
  "dash.*",
  "dash_bootstrap_components.*",
  "plotly.*",
  "scipy.*",
]
ignore_missing_imports = true

[tool.pytest.ini_options]
addopts = "--cov=dawa_trpl"

[tool.coverage.run]
omit = ["*/__main__.py"]

[tool.ruff]
select = [
  "E",
  "F",
  "W",
  "I",
]
